--- a/stockhub-backend/StockHub.Application/StockHub.Application.csproj
+++ b/stockhub-backend/StockHub.Application/StockHub.Application.csproj
@@ -9,6 +9,11 @@
     <ItemGroup>
       <PackageReference Include="FluentValidation" Version="12.1.1" />
       <PackageReference Include="FluentValidation.DependencyInjectionExtensions" Version="12.1.1" />
+      <PackageReference Include="Microsoft.EntityFrameworkCore" Version="10.0.3" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <ProjectReference Include="..\StockHub.Domain\StockHub.Domain.csproj" />
     </ItemGroup>
 
 </Project>
