--- a/stockhub-backend/StockHub.Application/StockHub.Application.csproj
+++ b/stockhub-backend/StockHub.Application/StockHub.Application.csproj
@@ -7,6 +7,7 @@
     </PropertyGroup>
 
     <ItemGroup>
+      <PackageReference Include="BCrypt.Net-Next" Version="4.1.0" />
       <PackageReference Include="FluentValidation" Version="12.1.1" />
       <PackageReference Include="FluentValidation.DependencyInjectionExtensions" Version="12.1.1" />
       <PackageReference Include="Microsoft.EntityFrameworkCore" Version="10.0.3" />
@@ -14,6 +15,13 @@
 
     <ItemGroup>
       <ProjectReference Include="..\StockHub.Domain\StockHub.Domain.csproj" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <Folder Include="Orders\" />
+      <Folder Include="PurchaseOrders\" />
+      <Folder Include="Reports\" />
+      <Folder Include="SaleOrders\" />
     </ItemGroup>
 
 </Project>
