chore: update project references
Signed-off-by: DvNET <46932317+Pahasara@users.noreply.github.com>

--- a/stockhub-backend/StockHub.Infrastructure/StockHub.Infrastructure.csproj
+++ b/stockhub-backend/StockHub.Infrastructure/StockHub.Infrastructure.csproj
@@ -13,7 +13,13 @@
     </ItemGroup>
 
     <ItemGroup>
-      <Folder Include="Data\" />
+      <Folder Include="Identity\" />
+      <Folder Include="Reports\" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <ProjectReference Include="..\StockHub.Application\StockHub.Application.csproj" />
+      <ProjectReference Include="..\StockHub.Domain\StockHub.Domain.csproj" />
     </ItemGroup>
 
 </Project>
