--- a/stockhub-backend/StockHub.Infrastructure/StockHub.Infrastructure.csproj
+++ b/stockhub-backend/StockHub.Infrastructure/StockHub.Infrastructure.csproj
@@ -7,14 +7,11 @@
     </PropertyGroup>
 
     <ItemGroup>
+      <PackageReference Include="EFCore.NamingConventions" Version="10.0.1" />
       <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="10.0.3" />
       <PackageReference Include="Microsoft.EntityFrameworkCore" Version="10.0.3" />
       <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="10.0.0" />
-    </ItemGroup>
-
-    <ItemGroup>
-      <Folder Include="Identity\" />
-      <Folder Include="Reports\" />
+      <PackageReference Include="QuestPDF" Version="2026.2.1" />
     </ItemGroup>
 
     <ItemGroup>
