chore: update default appsettings
Signed-off-by: DvNET <46932317+Pahasara@users.noreply.github.com>

--- a/stockhub-backend/StockHub.API/appsettings.json
+++ b/stockhub-backend/StockHub.API/appsettings.json
@@ -1,4 +1,13 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Host=localhost;Database=stockhub_db;Username=postgres;Password="
+  },
+  "JwtSettings": {
+    "Secret": "12345678123456781234567812345678",
+    "Issuer": "DvNET_StockHub",
+    "Audience": "StockHub_Users",
+    "ExpiryMinutes": 480
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
